--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
  
 services:
   db:
-    image: mysql:5.7
+    image: mysql:oracle
     container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: my_secret_password
